# status-board

./: README.md  pyproject.toml
src/status_board/: generate_plot.py  generate_test_board.py  models.py  server.py
src/status_board/templates/: index.html  script.js
