[tool.poetry]
name = "status_board"
version = "0.1.0"
description = "A simple tool for generating project status as an SVG"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
matplotlib = "^3.5.1"
click = "^8.0.4"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
